classes intermediárias implementadas
agora fica intermediando.